--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -130,3 +130,115 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
+
+li {
+  list-style: none; }
+
+ul {
+  padding: 0;
+  margin: 0; }
+
+html {
+  font-size: 62.5%; }
+
+.header {
+  height: 100vh;
+  width: 100%;
+  background: url("../../images/martini-cocktail-on-glass-hd-wallpaper.jpg");
+  background-size: cover;
+  background-position: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .header__container {
+    background-color: rgba(139, 0, 0, 0.733);
+    -webkit-clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 80%);
+            clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 80%);
+    margin: 0 auto;
+    height: 30vh;
+    width: 100%;
+    min-width: 350px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .header__container__side {
+      width: 50%;
+      height: 100%;
+      position: relative;
+      overflow: hidden; }
+  .header__text {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    color: white;
+    position: absolute;
+    top: 35%;
+    -webkit-transition: .4s;
+    transition: .4s; }
+    .header__text span {
+      font-family: 'Source Sans Pro', sans-serif;
+      color: black; }
+    .header__text--left {
+      right: 0px; }
+      .header__text--left--end {
+        right: -200px; }
+    .header__text--right {
+      left: 0px; }
+      .header__text--right--end {
+        left: -200px; }
+  .header:hover .header__text--left--end {
+    right: 2.5px; }
+  .header:hover .header__text--left--start {
+    right: -200px; }
+  .header:hover .header__text--right--end {
+    left: 2.5px; }
+  .header:hover .header__text--right--start {
+    left: -200px; }
+
+.section {
+  width: 100%;
+  height: 100vh;
+  border: 1px solid black; }
+  .section1 {
+    background-color: darkred; }
+  .section2 {
+    background-color: #323232; }
+  .section3 {
+    background-color: darkred; }
+  .section4 {
+    background-color: #323232; }
+  .section--results {
+    background-color: darkred; }
+  .section h3 {
+    font-family: "Playfair Display", serif;
+    text-transform: uppercase;
+    color: white;
+    font-size: 2rem;
+    text-align: center; }
+
+form {
+  width: 100%;
+  height: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border: 1px solid white; }
+
+label {
+  width: 100%;
+  border: 1px solid yellow;
+  cursor: pointer; }
+  label:hover {
+    background-color: red; }
+
+input[type='radio'] {
+  display: none; }
