--- a/dev/styles/partials/_mixins.scss
+++ b/dev/styles/partials/_mixins.scss
@@ -6,13 +6,13 @@ $primaryFont: 'Playfair Display', serif;
 $secondaryFont: 'Source Sans Pro', sans-serif;
 
 
-$primaryColor:darkred;
-$primaryColorOpacity: rgba(139, 0, 0, 0.733);
+$primaryColor:#56638A;
+$primaryColorOpacity: rgba(86,99, 138, 0.733);
 $secondaryColor: #323232;
 
 $primaryFontColor: white;
 $secondaryFontColor: black;
-$accentFontColor: rgba(190,190,190);
+$accentFontColor: #ffcc00;
 
 
 $buttonHover: red;
