--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -1,4 +1,21 @@
 
+#heroVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.5);
+    }
+}
+
 .header {
     height: 100vh;
     width: 100%;
