--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -159,6 +159,21 @@ ul {
 html {
   font-size: 62.5%; }
 
+#heroVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%; }
+  #heroVideo:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5); }
+
 .header {
   height: 100vh;
   width: 100%;
