--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -13,13 +13,15 @@ ul {
     padding: 15px 27px;
     border: 2px solid white;
     background-position: left;
-    background: linear-gradient(to right, transparent 33%, blue 66%, red 100%);
+    background: linear-gradient(to right, transparent 33%, $primaryColor 66%);
     background-size: 300% 100%;
     overflow: hidden;
     color: white;
     top:70%;
     font-size: 2.5rem;
-    transition: all .3s;
+    transition: all 1s;
+    opacity: 0;
+    animation: mainMenuButton 1.5s linear forwards 4.2s;
     &:hover {
         background-position: right;
     }
