--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -100,13 +100,15 @@
         }
     }
     &__subheader {
+        width: 100%;
+        text-align: center;
+        left: 50%;
         font-family: 'Playfair Display', serif;
         font-weight: 600;
         font-size: 3rem;
         position: absolute;
         top: 42%;
         opacity: 0;
-        left: 50%;
         transform: translateX(-50%);
         color: white;
         animation: subheader .6s linear forwards 2.6s;
@@ -184,7 +186,7 @@
     0% {
         opacity: 0;
     }
-    50% {
+    33% {
         opacity: 1;
         background-position: left;
     }
