--- a/dev/styles/partials/_results.scss
+++ b/dev/styles/partials/_results.scss
@@ -1,4 +1,24 @@
-// .result {
-//     width: 100%;
-//     height: 50%;
-// }
+//container
+.section--results {
+    position: relative;
+}
+
+.result {
+    position: absolute;
+    border: 1px solid yellow;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+.additional-drink-info {
+    display: none;
+}
+
+.additional-movie-info {
+    display: none;
+}
