--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -469,3 +469,19 @@ label {
 
 input[type='radio'] {
   display: none; }
+
+.section--results {
+  position: relative; }
+
+.result {
+  position: absolute;
+  border: 1px solid yellow;
+  background-color: red;
+  width: 100%;
+  height: 100%; }
+
+.additional-drink-info {
+  display: none; }
+
+.additional-movie-info {
+  display: none; }
