--- a/dev/styles/partials/_questions.scss
+++ b/dev/styles/partials/_questions.scss
@@ -1,18 +1,17 @@
 .section {
     width: 100%;
     height: 100vh;
-    border: 1px solid black;
     &1 {
-        background-color: $primaryColor;
+        background-color: #444;
     }
     &2 {
-       background-color: $secondaryColor;
+       background-color: #565656;
     }
     &3 {
-        background-color: $primaryColor;
+        background-color: #6b6b6b;
     }
     &4 {
-       background-color: $secondaryColor;
+       background-color: #888;
     }
     &--results{
         background-color: $resultsPage;
@@ -22,53 +21,56 @@
         @include header;
         display: flex;
         justify-content: center;
-        align-items: center;
-        height: 60px;
+        align-items: flex-end;
+        height: 90px;
         margin: 0;
     }
 }
 
 form {
     width: 100%;
-    height: calc(100% - 40px);
+    height: calc(100% - 90px);
     padding: 50px 0;
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    border: 1px solid white;
+    // justify-content: center;
+    // border: 1px solid white;
 }
 
 label {
     width: 100%;
     max-width: 250px;
-    font-size: 2rem;
+    font-size: 2.3rem;
+    font-weight: 400;
     padding: 30px 0;
     text-align: center;
-    border: 1px solid white;
-    color: white;
     cursor: pointer;
     box-shadow:
-    0.3em 0.3em 0 0 blue,
-    inset 0.3em 0.3em 0 0 blue;
+    0.4em 0.4em 0 0 $buttonColor,
+    inset 0.4em 0.4em 0 0 $buttonColor;
     transition: 0.3s;
-    color: blue;
+    color: $accentFontColor;
 
     &:hover {
         // background-color: $buttonHover;
-        border-color: yellow;
+        font-weight: 700;
+        border-color: $buttonColor;
         color: white;
         box-shadow:
-            0 0 0 0 yellow,
-            inset 6em 3.5em 0 0 yellow;
+            0 0 0 0 $buttonColor,
+            inset 8em 8em 0 0 $buttonColor;
     }
 
     &:focus {
-        border-color: yellow;
+        font-weight: 700;
+        border-color: $buttonColor;
         color: white;
         box-shadow:
-      0 0 0 0 yellow,
-      inset 6em 3.5em 0 0 yellow;
+      0 0 0 0 $buttonColor,
+      inset 8em 8em 0 0 $buttonColor;
     }
     &::before {
 
@@ -76,6 +78,15 @@ label {
     &::after {
 
     }
+}
+
+input[type="radio"]:checked + label{
+    font-weight: 700;
+        border-color: $buttonColor;
+        color: white;
+        box-shadow:
+      0 0 0 0 $buttonColor,
+      inset 8em 8em 0 0 $buttonColor;
 }
 
 
@@ -96,4 +107,17 @@ label {
 
 input[type='radio'] {
     display: none;
+}
+
+
+@media (min-width: 750px) {
+    .section {
+        height: 50vh;
+    }
+
+    form {
+        height: calc(50vh - 90px);
+        flex-direction: row;
+        padding: 0;
+    }
 }
