--- a/dev/styles/partials/_results.scss
+++ b/dev/styles/partials/_results.scss
@@ -4,13 +4,43 @@
 }
 
 .result {
-    position: absolute;
     border: 1px solid yellow;
-    background-color: red;
+    background-color: #444;
     width: 100%;
     height: 100%;
+    // height: calc(50% - 30px);
+    &-title {
+       height: 30px; 
+    }
+    position: relative;
 }
 
+
+.drinks-result__container {
+    & img {
+        // border-radius: 50%;
+        border-radius: 15px;
+        width: calc(100% - 100px);
+        margin: 50px;
+    }
+}
+
+.movies-result__container {
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    & img {
+        // border-radius: 50%;
+        border-radius: 15px;
+        width: calc(100% - 100px);
+        margin: 50px;
+    }
+}
+
+
+.another-drink {
+    top: calc(100% - 90px);
+}
 
 
 
@@ -22,3 +52,5 @@
 .additional-movie-info {
     display: none;
 }
+
+
