--- a/dev/styles/partials/_results.scss
+++ b/dev/styles/partials/_results.scss
@@ -1,4 +1,4 @@
-//container
+// container
 .section--results {
     height: 50vh;
     width: 100%;
@@ -19,36 +19,54 @@
     justify-content: flex-end;
     }
     position: relative;
+}
+
+
+
+
+.result {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+.drink-image,
+.movie-image {
+    width: calc(100% - 100px);
+    margin: 0 50px;
+    max-width: 400px;
+    height: calc(100% - 200px);
+    margin-top: 50px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.drink-image:hover + .more-info{
+    display: block;
+}
+
+.movie-image:hover + .more-info{
+    display: block;
+}
+
+.another-movie,
+.another-drink {
+    bottom: 20px;
+}
+
+
+//wrap this in an image container
+.more-info {
+    left: 50%;
+    top: 50%;
+    background-color: #ddab0a;
+    transform: translate(-50%, -50%);
+    display: none;
+    &:hover {
+        display: block;
     }
-
-
-
-
-    .result {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        padding-bottom: 50px;
-    }
-
-    .drink-image,
-    .movie-image {
-        width: calc(100% - 100px);
-        margin: 0 50px;
-        max-width: 400px;
-        height: calc(100% - 200px);
-        margin-top: 50px;
-        object-fit: cover;
-        border-radius: 10px;
-    }
-
-    .another-movie,
-    .another-drink {
-        bottom: 20px;
-    }
-   
-
-
+}
 
 
 .additional-drink-info {
@@ -58,6 +76,7 @@
 .additional-movie-info {
     display: none;
 }
+
 
 @media (min-width: 750px) {
     .result {
@@ -80,6 +99,7 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        display: none;
     }
 
 
@@ -110,5 +130,7 @@
 
 
 }
+
+
 
 
